--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">FatherOfApps</string>
+    <string name="app_name">Base App</string>
     <string name="default_notify_title">Message</string>
 </resources>
