--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Base App</string>
     <string name="default_notify_title">Message</string>
+    <string name="app_widget_description">This is an app widget description</string>
 </resources>
